--- a/byf2.html
+++ b/byf2.html
@@ -74,7 +74,7 @@
                         <ul class="ul1">
                             <li>My name is Frank and I write fic. That's basically it.</li>
                             <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
-                            <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
+                            <li><a href="https://twitter.com/inaribin">twitter</a></li>
                         </ul>
                     </section>
                     <!--セクション2-->
@@ -84,164 +84,25 @@
                 <!--セクション1-->
 
                 <!--セクション1-->
-                <section class="section1" id="sample">
-                    <h1>sample tag</h1>
-                    <p>タグのサンプルです。</p>
+                <section class="section1" id="byf">
+                    <h1></h1>
                     <!--セクション2-->
                     <section class="section2">
-                        <h2>em,strong</h2>
-                        <p>
-                            <em>em（強調）タグのサンプルです。</em><br>
-                            <strong>strong（重要）タグのサンプルです。</strong>
-                        </p>
-                    </section>
-                    <!--セクション2-->
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>ul,ol</h2>
-                        <p>ulタグ（ul1）のサンプルです。（縦並びテキスト用・縦並び画像用）</p>
-                        <ul class="ul1">
-                            <li>アップル</li>
-                            <li>パイン</li>
-                            <li>ピーチ</li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                        </ul>
-
-                        <p>ulタグ（ul2）のサンプルです。（横並びテキスト用）</p>
-                        <ul class="ul2">
-                            <li>レモン</li>
-                            <li>グレープフルーツ</li>
-                            <li>オレンジ</li>
-                        </ul>
-
-                        <p>ulタグ（ul3）のサンプルです。（横並び画像用）</p>
-                        <ul class="ul3">
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                        </ul>
-
-                        <p>olタグ（クラス指定なし）のサンプルです。</p>
-                        <ol>
-                            <li>ストロベリー</li>
-                            <li>ブルーベリー</li>
-                            <li>ラズベリー</li>
-                        </ol>
-
-                        <p>ul,olタグは入れ子にすることも可能です。</p>
-                        <ol>
-                            <li>
-                                赤い果物
-                                <ul class="ul3">
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                黄色い果物
-                                <ul class="ul3">
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                    <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                                </ul>
-                            </li>
-                        </ol>
-                    </section>
-                    <!--セクション2-->
-
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>dl</h2>
-                        <p>dlタグ（dl1）のサンプルです。<br>
-                            定義リストと呼びます。工夫次第で色々な使い方が出来る便利なタグです。更新履歴などにも使えます。</p>
+                        <h2>byf</h2>
+                        <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
-                            <dt>アセロラ</dt>
-                            <dd>ビタミンCが豊富な果実</dd>
-                            <dt>ライチ</dt>
-                            <dd>葉酸が多く含まれている</dd>
-                            <dt>ドラゴンフルーツ</dt>
-                            <dd>日本では沖縄県で多く栽培されている</dd>
-                        </dl>
+                            <dt><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>      
+                            <dt>If my account is on private, feel free to request to follow.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                            <dt>※ Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</dt>
+                       
                     </section>
-                    <!--セクション2-->
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>box</h2>
-                        <p>装飾ボックスのサンプルです。divタグにクラス（box）を指定します。</p>
-                        <div class="box">
-                            <p>装飾ボックス内でのサンプルです。</p>
-                            <ul class="ul2">
-                                <li>レモン</li>
-                                <li>グレープフルーツ</li>
-                                <li>オレンジ</li>
-                            </ul>
-                            <ol>
-                                <li>ストロベリー</li>
-                                <li>ブルーベリー</li>
-                                <li>ラズベリー</li>
-                            </ol>
-                        </div>
-                    </section>
-                    <!--セクション2-->
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>form</h2>
-                        <p>formタグ（form1）のサンプルです。<br>
-                            メールフォームなどを設置するときに利用します。</p>
-                        <form class="form1">
-                            <p>
-                                <label><span class="spanform">name</span>
-                                    <input type="text" name="name" value="お名前"></label>
-                            </p>
-                            <p>
-                                <label><span class="spanform">message</span>
-                                    <textarea cols="20" rows="3" name="message">お問い合わせ内容</textarea></label>
-                            </p>
-                            <p>
-                                <input type="submit" value="send" class="button">
-                            </p>
-                        </form>
-                    </section>
-                    <!--セクション2-->
-                    <!--ページトップボタン-->
-                    <p class="pagetop"><a href="#all">▲</a></p>
-                </section>
-                <!--セクション1-->
-
-                <!--セクション1-->
-                <section class="section1" id="bookmark">
-                    <h1>bookmark</h1>
-                    <p>お気に入りサイトへのリンクです。</p>
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>template site</h2>
-                        <ul class="ul2">
-                            <li><a href="#">サンプルリンク</a></li>
-                            <li><a href="#">サンプルリンク</a></li>
-                            <li><a href="#">サンプルリンク</a></li>
-                            <li><a href="#">サンプルリンク</a></li>
-                            <li><a href="#">サンプルリンク</a></li>
-                            <li><a href="#">サンプルリンク</a></li>
-                        </ul>
-                    </section>
-                    <!--セクション2-->
-                    <!--セクション2-->
-                    <section class="section2">
-                        <h2>material site</h2>
-                        <ul class="ul3">
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                            <li><a href="#"><img src="banner.jpg" alt="バナー"></a></li>
-                        </ul>
-                    </section>
-                    <!--セクション2-->
-                    <!--ページトップボタン-->
                     <p class="pagetop"><a href="#all">▲</a></p>
                 </section>
                 <!--セクション1-->
