--- a/byf2.html
+++ b/byf2.html
@@ -55,8 +55,8 @@
                 <!--ナビ-->
                 <nav>
                     <ul id="navlist">
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#byf">byf</a></li>
+                        <li>・<a href="#about">about</a></li>
+                        <li>・<a href="#byf">byf</a></li>
                     </ul>
                 </nav>
                 <!--ナビ-->
