--- a/byf2.html
+++ b/byf2.html
@@ -55,8 +55,8 @@
                 <!--ナビ-->
                 <nav>
                     <ul id="navlist">
-                        <li>・<a href="#about">about</a></li>
-                        <li>・<a href="#byf">byf</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#byf">byf</a></li>
                     </ul>
                 </nav>
                 <!--ナビ-->
@@ -73,8 +73,8 @@
                         <h2>about</h2>
                         <ul class="ul1">
                             <li>My name is Frank and I write fic. That's basically it.</li>
-                            <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
-                            <li><a href="https://twitter.com/inaribin">twitter</a></li>
+                            <li>・<a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
+                            <li>・<a href="https://twitter.com/inaribin">twitter</a></li>
                         </ul>
                     </section>
                     <!--セクション2-->
