--- a/byf2.html
+++ b/byf2.html
@@ -93,10 +93,9 @@
                         <dl class="dl1">
                             <dt><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.</dt>
+                            <dt>I don't often follow back, and I delete my tweets often.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                            <dt>I turn non-mutual notifications off sometimes. They're currently on.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>      
                             <dt>If my account is on private, feel free to request to follow.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
