--- a/byf.html
+++ b/byf.html
@@ -55,8 +55,8 @@
                 <!--ナビ-->
                 <nav>
                     <ul id="navlist">
-                        <li><a href="https://twitter.com/inaribin">twitter</a></li>
-                        <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#byf">byf</a></li>
                     </ul>
                 </nav>
                 <!--ナビ-->
@@ -69,6 +69,23 @@
 
                 <!--セクション1-->
                 <section class="section1" id="about">
+                    <h1> </h1>
+                        <h2>about</h2>
+                        <ul class="ul1">
+                            <li>My name is Frank and I write fic. That's basically it.</li>
+                            <li> </li>
+                            <li>・<a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
+                            <li>・<a href="https://twitter.com/inaribin">twitter</a></li>
+                        </ul>
+                    </section>
+                    <!--セクション2-->
+                    <!--ページトップボタン-->
+                    <p class="pagetop"><a href="#all">▲</a></p>
+                </section>
+                <!--セクション1-->
+
+                <!--セクション1-->
+                <section class="section1" id="byf">
                     <h1></h1>
                     <!--セクション2-->
                     <section class="section2">
@@ -77,10 +94,9 @@
                         <dl class="dl1">
                             <dt><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.</dt>
+                            <dt>I don't often follow back, and I delete my tweets often.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                            <dt>I turn non-mutual notifications off sometimes. They're currently <strong>on</strong>.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>      
                             <dt>If my account is on private, feel free to request to follow.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
