--- a/byf.html
+++ b/byf.html
@@ -72,7 +72,7 @@
                     <h1> </h1>
                         <h2>about</h2>
                         <ul class="ul1">
-                            <li>My name is Frank and I write fic. That's basically it.</li>
+                            <li>My name is Frank and I write fic. <em>( ͡° ͜ʖ ͡°)</em></li>
                             <li> &nbsp; </li>
                             <li>・<a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
                             <li>・<a href="https://twitter.com/inaribin">twitter</a></li>
