--- a/byf.html
+++ b/byf.html
@@ -96,7 +96,7 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>I don't often follow back, and I delete my tweets often.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>I turn non-mutual notifications off sometimes. They're currently <strong>off</strong>.</dt>
+                            <dt>I turn non-mutual notifications off sometimes. They're currently <strong>on</strong>.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>      
                             <dt>If my account is on private, feel free to request to follow.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
