--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">❤️ About</a></li>
-								<li><a href="#ts4">💙 TS4</a></li>
+								<li><a href="#byf">💙 BYF</a></li>
 								<li><a href="#fic">❤️ Fic</a></li>
 							</ul>
 						</nav>
@@ -54,11 +54,14 @@
 							</article>
 
 						<!-- Interests -->
-							<article id="ts4">
-								<h2 class="major">TS4 Mods</h2>
+							<article id="byf">
+								<h2 class="major">🐦 BYF 🐤</h2>
 										<ul>
-										<li><a href="https://foxjar.dreamwidth.org/12083.html">Terms</a></li>
-										<li><a href="https://foxjar.dreamwidth.org/tag/ts4:+identity+v">Series: Identity V</a></li>
+											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
+											<li>I don't often follow back, and I delete my tweets often.</li>
+											<li>I turn non-mutual notifications off sometimes.</li>
+											<li>If my account is on private, feel free to request to follow.</li>
+											<li>※ Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
 										</ul>
 
 								</h2>
