--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h2 class="major">🐦 BYF 🐤</h2>
 										<ul>
 											<li><b>Abusers, bigots, and minors will be blocked.</b></li>
-											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles, zoophiles, and people who support them.
+											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles/MAPs, zoophiles, and people who support them.
 											&nbsp;
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>Posts on third-party sites (Privatter, Fusetter, etc) are locked to mutuals.</li>
