--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 						<!-- Interests -->
 							<article id="byf">
-								<h2 class="major">🐦 BYF 🐤</h2>
+								<h2 class="major">🐦 BYF 🐤 → <a href="https://twitter.com/inaribin">inaribin</a></h2>
 										<ul>
 											<li><b>Abusers, bigots, and minors will be blocked.</b></li>
 											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles/MAPs, zoophiles, and people who support them.
