--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h2 class="major">🐦 BYF 🐤 → <a href="https://twitter.com/inaribin">inaribin</a></h2>
 										<ul>
 											<li><b>Abusers, bigots, and minors will be blocked.</b></li>
-											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles/MAPs, zoophiles, and people who support them.
+											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles/MAPs, zoophiles, etc, and people who support them.
 										</ul>
 										
 										<ul>
