--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
 							<article id="byf">
 								<h2 class="major">🐦 BYF 🐤 → <a href="https://twitter.com/inaribin">inaribin</a></h2>
 										<ul>
-											<li><b>Abusers, bigots, and minors will be blocked.</b></li>
-											&nbsp; ↳ Abusers include anti-shippers, pro-harassers, pedophiles/MAPs, zoophiles, etc, and people who support them.
-										</ul>
-										
-										<ul>
+											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>Posts on third-party sites (Privatter, Fusetter, etc) are locked to mutuals.</li>
 											<li>If my account is on private, feel free to request to follow.</li>
