--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 										<ul>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
-											<li>Posts on third-party sites (Privatter, Fusetter, etc) are locked to mutuals.</li>
+											<li>Posts on third-party sites (Privatter, Fusetter, etc) are occasionally locked to mutuals.</li>
 											<li>If my account is on private, feel free to request to follow.</li>
-											<li>※ Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
+											<li>※ Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
 										</ul>
 
 								</h2>
