--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h2 class="major">🐦 BYF 🐤 → <a href="https://twitter.com/inaribin">inaribin</a></h2>
 										<ul>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
-											<li>↳ If you've found yourself blocked by me, there's a 99% chance it's because you're an abuser (you abuse real people or support people who do).</li>
+											<li>↳ If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>Posts on third-party sites (Privatter, Fusetter, etc) are occasionally locked to mutuals.</li>
 											<li>If my account is on private, feel free to request to follow.</li>
