--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 									<b>Alias</b>: foxjar<br>
 									<b>Status</b>: tired<br>
 									<b>Gender</b>: ♂️ (he/him/his)<br>
-									<b>Likes</b>: sleeping, avocado, tofu, Kitagawa Yusuke, shukita, writing, horror<br>
-									<b>Dislikes</b>: Brussels sprouts, broccoli, cauliflower, being woken up<br>
-									<b>Favorite Food</b>: dishes with fried tofu (teriyaki tofu, tofu pad thai)<br><br>
+									<b>Likes</b>: sleeping, avocado, Kitagawa Yusuke, shukita, writing, horror<br>
+									<b>Dislikes</b>: being woken up<br>
+									<b>Favorite Food</b>: tofu<br><br>
 								
 									<img src="/images/bagelboy.png" width="100%">
 
