--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 						<!-- Interests -->
 							<article id="byf">
-								<h2 class="major">🐦 BYF 🐤 → <a href="https://twitter.com/inaribin">inaribin</a></h2>
+								<h2 class="major">🐦 BYF 🐤</h2>
 										<ul>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>↳ If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
