--- a/index.html
+++ b/index.html
@@ -56,20 +56,16 @@
 						<!-- Interests -->
 							<article id="byf">
 								<h2 class="major">🐦 BYF 🐤</h2>
-										I love potatoes
-										<ul>
-											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
-											<li>↳ If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
-											<li>I don't often follow back, and I delete my tweets often.</li>
-											<li>↳ I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.</li>
-											<li>Posts on third-party sites (Privatter, Fusetter, etc) are occasionally locked to mutuals.</li>
-											<li>If my account is on private, feel free to request to follow.</li>
-											<li>※ Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
-										</ul>
+										・Abusers/anti-shippers, bigots, and minors will be blocked.<br>
+										↳ If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.<br>
+										・I don't often follow back, and I delete my tweets often.<br>
+										↳ I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.<br>
+										・Posts on third-party sites (Privatter, Fusetter, etc) are occasionally locked to mutuals.<br>
+										・If my account is on private, feel free to request to follow.<br>
+										※ Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.
 
 								</h2>
 
-									</ul>
 							</article>
 
 						<!-- Links -->
