--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 									<b>Likes</b>: sleeping, avocado, Kitagawa Yusuke, shukita, writing, horror<br>
 									<b>Dislikes</b>: being woken up<br>
 									<b>Favorite Food</b>: tofu<br><br>
+
+									<b>Contact</b>: frank@foxjar.dev<br><br>
 								
 									<img src="/images/bagelboy.png" width="100%">
 
