--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<b>Dislikes</b>: being woken up<br>
 									<b>Favorite Food</b>: tofu<br><br>
 
-									<blockquote><b>Contact</b>: <u><i>frank@foxjar.dev</i></u></blockquote>
+									<blockquote><b>Contact</b>: <u>frank@foxjar.dev</u></blockquote>
 								
 									<img src="/images/bagelboy.png" width="100%">
 
