--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#major">❤️ About</a></li>
+								<li><a href="#about">❤️ About</a></li>
 								<li><a href="#byf">💙 BYF</a></li>
 								<li><a href="#fic">❤️ Fic</a></li>
 							</ul>
@@ -41,17 +41,55 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-									<b>Name</b>: Frankie<br>
-									<b>Alias</b>: foxjar<br>
-									<b>Status</b>: tired<br>
-									<b>Gender</b>: ♂️ (he/him/his)<br>
-									<b>Likes</b>: sleeping, avocado, Kitagawa Yusuke, shukita, writing, horror<br>
-									<b>Dislikes</b>: being woken up<br>
-									<b>Favorite Food</b>: tofu<br><br>
-
-									<blockquote><b>Inquiries</b>: <u>frank@foxjar.dev</u></blockquote>
-								
-									<img src="/images/bagelboy.png" width="100%">
+									<section>
+									<h3 class="major">Form</h3>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="demo-name">Name</label>
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+											</div>
+											<div class="field half">
+												<label for="demo-email">Email</label>
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+											</div>
+											<div class="field">
+												<label for="demo-category">Category</label>
+												<select name="demo-category" id="demo-category">
+													<option value="">-</option>
+													<option value="1">Manufacturing</option>
+													<option value="1">Shipping</option>
+													<option value="1">Administration</option>
+													<option value="1">Human Resources</option>
+												</select>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
+												<label for="demo-priority-low">Low</label>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-high" name="demo-priority">
+												<label for="demo-priority-high">High</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-copy" name="demo-copy">
+												<label for="demo-copy">Email me a copy</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-human" name="demo-human" checked>
+												<label for="demo-human">Not a robot</label>
+											</div>
+											<div class="field">
+												<label for="demo-message">Message</label>
+												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" class="primary" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</section>
 
 							</article>
 
