--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">❤️ About</a></li>
+								<li><a href="#elements">❤️ About</a></li>
 								<li><a href="#byf">💙 BYF</a></li>
 								<li><a href="#fic">❤️ Fic</a></li>
 							</ul>
