--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 								
 										※ Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.
 
+										<ul class="alt">
+											<li>test</li>
+											<li>test</li>
+										</ul>
 								</h2>
 
 							</article>
