--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 										<ul class="alt">
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
+											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.</li>
 											<li>Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
-											<li></li>
 										</ul>
 							
 								</h2>
