--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<article id="byf">
 								<h2 class="major">🐦 BYF 🐤</h2>
 										<ul class="alt">
+											<li>Content warnings:  cannibalism, death, incest, noncon, nsfw</li>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
 											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
