--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<b>Dislikes</b>: being woken up<br>
 									<b>Favorite Food</b>: tofu<br><br>
 
-									<blockquote><b>Inquiries</b>: <u>frank@foxjar.dev</u></blockquote>
+									<blockquote><b>Inquiries</b>: frank@foxjar.dev</blockquote>
 								
 									<img src="/images/bagelboy.png" width="100%">
 
@@ -58,6 +58,10 @@
 						<!-- Interests -->
 							<article id="byf">
 								<h2 class="major">🐦 BYF 🐤</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<h5>Heading Level 5</h5>
+									<h6>Heading Level 6</h6>
 										<ul class="alt">
 											<li>Content warnings:  cannibalism, death, incest, noncon, nsfw</li>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
