--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
 						<!-- Interests -->
 							<article id="byf">
 								<h2 class="major">🐦 BYF 🐤</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
+										<h3>Content warnings:  cannibalism, death, incest, noncon, nsfw</h3>
 										<ul class="alt">
-											<li>Content warnings:  cannibalism, death, incest, noncon, nsfw</li>
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
 											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
