--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.</li>
+											<li>Notifications are off for non-followers.</li>
 											<li>Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
 										</ul>
 							
