--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
 
 						<!-- Interests -->
 							<article id="byf">
-								<h2 class="major">🐦 BYF 🐤</h2>
+								<h2 class="major">🐦 BYF 🐤 <a href="https://twitter.com/foxjars">foxjars</a></h2>
 										<ul class="alt">
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>I don't often follow back, and I delete my tweets often.</li>
 											<li>I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.</li>
 											<li>Notifications are off for non-followers.</li>
-										<ul>
-											
+										</ul>
+										
+										<h4>Etc</h4>
 										<ul clas="alt">
 											<li>If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
 											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
