--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										</ul>
 										
 										<h4>Etc</h4>
-										<ul clas="alt">
+										<ul class="alt">
 											<li>If you've found yourself blocked by me, there's a 99% chance it's because you abuse real people or support people who do.</li>
 											<li>If you think you might've accidentally got caught in a blockchain, you can message me on an alt/email me/etc.</li>
 											<li>Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
