--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 						<!-- Interests -->
 							<article id="byf">
-								<h2 class="major">🐦 BYF 🐤 <a href="https://twitter.com/foxjars">foxjars</a></h2>
+								<h2 class="major">BYF</h2>
 										<ul class="alt">
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
-											<li>I don't often follow back, and I delete my tweets often.</li>
-											<li>I won't be following back people I don't recognize, but feel free to strike up a conversation in DMs.</li>
+											<li>I don't often follow back, and I delete my posts often.</li>
+											<li>I won't be following back people I don't know, but feel free to strike up a conversation in DMs.</li>
 										</ul>
 										
 										<h4>Etc</h4>
