--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 											<li><b>Abusers/anti-shippers, bigots, and minors will be blocked.</b></li>
 											<li>I don't often follow back, and I delete my posts often.</li>
 											<li>I won't be following back people I don't know, but feel free to strike up a conversation in DMs.</li>
+											<li>Twitter doesn't often send me notifications, so if I miss replying to something, feel free to DM me.</li>
 										</ul>
 										
 										<h4>Etc</h4>
 										<ul class="alt">
-											<li>If you've found yourself blocked by me, it's because you abuse real people or support people who do.</li>
+											<li>If you've found yourself blocked by me, it's because you abuse real people, or you support people who do (and were likely caught via blockchain). If you think there's been a mistake, DM me on an alt and I'll try to figure it out.</li>
 											<li>Once a better social media site launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</li>
 										</ul>
 							
