--- a/index2.html
+++ b/index2.html
@@ -116,8 +116,8 @@
 								<h2 class="major">Fic</h2>
 									
 									<ul class="alt">
-										<li><a href="https://archiveofourown.org/users/foxjar">【Archive of Our Own】</a></li>
-										<li>※ <b>Charity Commission Status</b>: Open! Currently accepting requests up to 5k. Choose which charity you donate to. <a href="https://foxjar.dreamwidth.org/17059.html">More info on my blog here.</a></li>
+										<li><a href="https://archiveofourown.org/users/">【Archive of Our Own】</a></li>
+										<li>※ <b>Charity Commission Status</b>: Open! Currently accepting requests up to 5k. Choose which charity you donate to. <a href="https://.dreamwidth.org/17059.html">More info on my blog here.</a></li>
 										<li>※ Access to my fan-related works doesn't require payment of any sort. 
 									All of my works are publicly available (or will be, in the case of WIPs). 
 									Works originally published in zines are later made available on AO3.</li>
