--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <li><p><strong>Abusers/anti-shippers, bigots, and minors will be blocked.</strong></p></li>
                         <li><p>If you&#39;ve found yourself blocked by me, it&#39;s most likely because you abuse real people, or you support people who do 
                           (and were likely caught via blockchain). If you think there&#39;s been a mistake, DM me on an alt and I&#39;ll try to figure it out.</p></li>
-                        <li><b>I don't care what fictional characters you ship, but I do care about how you treat other people.</b></li>
+                        <li><b>I don't care which fictional characters you ship, but I do care about how you treat other people.</b></li>
                       </ul>
                     </div>
                     <ul id="links03" class="links">
