--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div id="list01" class="list">
                       <ul>
                         <li><p><strong>Abusers/anti-shippers, bigots, and minors will be blocked.</strong></p></li>
-                        <li><p>If you&#39;ve found yourself blocked by me, it&#39;s most likely because you abuse real people, or you support people who do 
+                        <li><p>If you&#39;ve found yourself blocked by me, it&#39;s because you're a minor and/or you abuse real people, or you support people who do 
                           (and were likely caught via blockchain). If you think there&#39;s been a mistake, DM me on an alt and I&#39;ll try to figure it out.</p></li>
                         <li><p><strong>I don't care which fictional characters you ship, but I do care about how you treat other people.</strong></p></li>
                       </ul>
