--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                       <span><strong>Alias</strong>: foxjar</span><br /> 
                       <span><strong>Status</strong>: sleepy</span><br /> 
                       <span><strong>Gender</strong>: ♂️ (he/him/his)</span><br /> 
-                      <span><strong>Likes</strong>: sleeping, avocado, Kitagawa Yusuke, shukita, writing, horror</span><br /> 
+                      <span><strong>Likes</strong>: Kitagawa Yusuke, Lorenz Hellman Gloucester, avocado, horror, shukita, sleeping, writing</span><br /> 
                       <span><strong>Dislikes</strong>: being woken up</span><br /> 
                       <span><strong>Favorite Food</strong>: tofu</span><br /> <br /> 
                     
                       <span><a href="https://archiveofourown.org/users/foxjar">AO3</a> | 
                         <a href="https://foxjar.dreamwidth.org/">Dreamwidth</a> | 
-                        <a href="https://www.pixiv.net/en/users/59667447">Pixiv</a> |
+                        <a href="https://www.pixiv.net/en/users/59667447">Pixiv (🔒 My pixiv )</a> |
                         <a href="https://twitter.com/foxjars">Twitter</a></span><br /> <br /> 
                       
                       <span><strong>Email</strong>: frank@foxjar.dev</span>
