--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     
                       <span><a href="https://archiveofourown.org/users/foxjar">AO3</a> | 
                         <a href="https://foxjar.dreamwidth.org/">Dreamwidth</a> | 
-                        <a href="https://www.pixiv.net/en/users/59667447">Pixiv (🔒 My pixiv )</a> |
+                        <a href="https://www.pixiv.net/en/users/59667447">🔒 Pixiv</a> |
                         <a href="https://twitter.com/foxjars">Twitter</a></span><br /> <br /> 
                       
                       <span><strong>Email</strong>: frank@foxjar.dev</span>
