--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                       <ul>
                         <li><p><strong>Abusers/anti-shippers, bigots, and minors will be blocked.</strong></p></li>
                         <li><p>If you&#39;ve found yourself blocked by me, it&#39;s because you're a minor and/or you abuse real people/animals, or you support people who do 
-                          (and were likely caught via blockchain).</p></li>
+                          (and were likely caught via blockchain).</li>
+                        <li>If you think there's been a mistake, leave me a comment on this Dreamwidth post (comments are screened) and I'll get back to you.</p>
                         <li><p><strong>I don't care which fictional characters you ship, but I do care about how you treat other people.</strong></p></li>
+                        ※ Lorenz and Claude models from <a href="https://www.deviantart.com/marthemblem">marthemblem on Deviantart</a>.
                       </ul>
                     </div>
                     <ul id="links03" class="links">
