--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                           (and were likely caught via blockchain).</p></li>
                         <li><p><strong>I don't care which fictional characters you ship, but I do care about how you treat other people.</strong></p></li>
                         <br>
-                        ※ Lorenz and Claude models from <a href="https://www.deviantart.com/marthemblem">marthemblem on Deviantart</a>.
+                        ※ Lorenz model from <a href="https://www.deviantart.com/marthemblem">marthemblem on Deviantart</a>.
                       </ul>
                     </div>
                     <ul id="links03" class="links">
