--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@
                     <div id="list01" class="list">
                       <ul>
                         <li><p><strong>Abusers/anti-shippers, bigots, and minors will be blocked.</strong></p></li>
-                        <li><p>If you&#39;ve found yourself blocked by me, it&#39;s because you're a minor and/or you abuse real people/animals, or you support people who do 
-                          (and were likely caught via blockchain).</p></li>
                         <li><p><strong>I don't care which fictional characters you ship, but I do care about how you treat other people.</strong></p></li>
                         <br>
                         ※ Lorenz model from <a href="https://www.deviantart.com/marthemblem">marthemblem on Deviantart</a>.
@@ -138,7 +136,7 @@
                     <ul id="links09" class="links">
                       <li><a href="https://archiveofourown.org/users/foxjar">【Archive of Our Own】</a></li>
                     </ul>
-                    <p id="text12"><strong>※ Charity Commission Status</strong>: Closed until March 2021. 
+                    <p id="text12"><strong>※ Charity Fanwork Status</strong>: Closed until March 2021. 
                       <a href="https://foxjar.dreamwidth.org/17059.html">More info on my blog here.</a></p>
                     <p id="text06">※ Access to my fan-related works doesn&#39;t require payment of any sort. 
                       All of my works are publicly available (or will be, in the case of WIPs). 
