--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
                     <h2 id="text09">BYF</h2>
                     <div id="list01" class="list">
                       <ul>
-                        <li><p><strong>Abusers/anti-shippers, bigots, and minors will be blocked.</strong></p></li>
+                        <li><p><strong>Abusers/fancops, bigots, and minors will be blocked.</strong></p></li>
                         <li><p><strong>I don't care which fictional characters you ship, but I do care about how you treat other people.</strong></p></li>
-                        <br>
-                        ※ Lorenz model from <a href="https://www.deviantart.com/marthemblem">marthemblem on Deviantart</a>.
                       </ul>
                     </div>
                     <ul id="links03" class="links">
