--- a/index.html
+++ b/index.html
@@ -134,11 +134,8 @@
                     <ul id="links09" class="links">
                       <li><a href="https://archiveofourown.org/users/foxjar">【Archive of Our Own】</a></li>
                     </ul>
-                    <p id="text12"><strong>※ Charity Fanwork Status</strong>: Closed until March 2021. 
-                      <a href="https://foxjar.dreamwidth.org/17059.html">More info on my blog here.</a></p>
-                    <p id="text06">※ Access to my fan-related works doesn&#39;t require payment of any sort. 
-                      All of my works are publicly available (or will be, in the case of WIPs). 
-                      Works originally published in zines are later made available on AO3.</p>
+                    <p id="text12"><strong>※ Charity Fanwork Status</strong>: indefinite hiatus, but I'll be participating in charity auctions throughout the year! I'll announce these on Twitter. 
+                      <a href="https://foxjar.dreamwidth.org/17059.html">General info on my blog here.</a></p>
                     <ul id="links05" class="links">
                       <li><a href="#home">← Back</a></li>
                     </ul>
