--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@
                     <ul id="links09" class="links">
                       <li><a href="https://archiveofourown.org/users/foxjar">【Archive of Our Own】</a></li>
                     </ul>
-                    <p id="text12"><strong>※ Charity Fanwork Status</strong>: indefinite hiatus, but I'll be participating in charity auctions throughout the year! I'll announce these on Twitter. 
+                    <p id="text12"><strong>※ Charity Fanwork Status</strong>: indefinite hiatus, 
+                      but I'll be participating in charity auctions throughout the year! I'll announce these on Twitter as they come up.  
                       <a href="https://foxjar.dreamwidth.org/17059.html">General info on my blog here.</a></p>
+                    <ul>
+                      <li>owo</li>
+                    </ul>
                     <ul id="links05" class="links">
                       <li><a href="#home">← Back</a></li>
                     </ul>
