--- a/index.html
+++ b/index.html
@@ -137,11 +137,12 @@
                     <p id="text12"><strong>※ Charity Fanwork Status</strong>: indefinite hiatus, 
                       but I'll be participating in charity auctions throughout the year! I'll announce these on Twitter as they come up.  
                       <a href="https://foxjar.dreamwidth.org/17059.html">General info on my blog here.</a></p>
-                    <p id="text12">
+                    <div id="list01" class="list">Some charity auctions:
                     <ul>
-                      <li>owo</li>
+                      <li><a href="https://fandomtrumpshate.dreamwidth.org/">Fandom Trumps Hate</a></li>
+                      <li><a href="https://equalityauction.dreamwidth.org/">Equality Auction</a></li>
                     </ul>
-                    </p>
+                    </div>
                     <ul id="links05" class="links">
                       <li><a href="#home">← Back</a></li>
                     </ul>
