--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                       <span><strong>Alias</strong>: foxjar</span><br /> 
                       <span><strong>Status</strong>: sleepy</span><br /> 
                       <span><strong>Gender</strong>: ♂️ (he/him/his)</span><br /> 
-                      <span><strong>Likes</strong>: Kitagawa Yusuke, Lorenz Hellman Gloucester, avocado, horror, shukita, sleeping, writing</span><br /> 
+                      <span><strong>Likes</strong>: Kitagawa Yusuke, Lorenz Hellman Gloucester, avocado, claurenz, horror, shukita, sleeping, writing</span><br /> 
                       <span><strong>Dislikes</strong>: being woken up</span><br /> 
                       <span><strong>Favorite Food</strong>: tofu</span><br /> <br /> 
                     
